{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 15,
  "lineage": "76af95d1-4355-ab71-2c23-11b393134fd1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:internet-gateway/igw-04f0767f326afdc31",
            "id": "igw-04f0767f326afdc31",
            "owner_id": "375026044412",
            "tags": {
              "Ambiente": "dev",
              "Name": "igw-ue1-Chatbot-dev-01",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "igw-ue1-Chatbot-dev-01",
              "Proyecto": "Chatbot"
            },
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:route-table/rtb-004c9668c1e2f905e",
            "id": "rtb-004c9668c1e2f905e",
            "owner_id": "375026044412",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-private01",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-private01",
              "Proyecto": "Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:route-table/rtb-0176f21a850d63cee",
            "id": "rtb-0176f21a850d63cee",
            "owner_id": "375026044412",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-private02",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-private02",
              "Proyecto": "Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:route-table/rtb-055ef683e76e010c8",
            "id": "rtb-055ef683e76e010c8",
            "owner_id": "375026044412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f0767f326afdc31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-public01",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-public01",
              "Proyecto": "Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:route-table/rtb-0f26685f57d3d42ea",
            "id": "rtb-0f26685f57d3d42ea",
            "owner_id": "375026044412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f0767f326afdc31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-public02",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "rt-ue1-Chatbot-dev-public02",
              "Proyecto": "Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_private01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ca8472774d558e3",
            "route_table_id": "rtb-004c9668c1e2f905e",
            "subnet_id": "subnet-0dc1e8f6c9e5e0b9c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt_private01",
            "module.vpc.aws_subnet.sn_private01",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_private02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072b5f107a7d35cd5",
            "route_table_id": "rtb-0176f21a850d63cee",
            "subnet_id": "subnet-0463f0975d11c7685"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt_private02",
            "module.vpc.aws_subnet.sn_private02",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_public01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0865c566ac9fcf9b8",
            "route_table_id": "rtb-055ef683e76e010c8",
            "subnet_id": "subnet-0f0a6aefecd1b8ce2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.rt_public01",
            "module.vpc.aws_subnet.sn_public01",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as_public02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fc4e6c7b0c273d0",
            "route_table_id": "rtb-0f26685f57d3d42ea",
            "subnet_id": "subnet-01545b8187ce2056a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.rt_public02",
            "module.vpc.aws_subnet.sn_public02",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_private01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:subnet/subnet-0dc1e8f6c9e5e0b9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.18.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc1e8f6c9e5e0b9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375026044412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-private01",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-private01",
              "Proyecto": "Chatbot"
            },
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_private02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:subnet/subnet-0463f0975d11c7685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0463f0975d11c7685",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "375026044412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-private02",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-private02",
              "Proyecto": "Chatbot"
            },
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_public01",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:subnet/subnet-0f0a6aefecd1b8ce2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.18.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0a6aefecd1b8ce2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375026044412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-public01",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-public01",
              "Proyecto": "Chatbot"
            },
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_public02",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:subnet/subnet-01545b8187ce2056a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.18.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01545b8187ce2056a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "375026044412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-public02",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "sn-ue1-Chatbot-dev-public02",
              "Proyecto": "Chatbot"
            },
            "vpc_id": "vpc-0f41435f64391edc6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:375026044412:vpc/vpc-0f41435f64391edc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-00e46a49837cec175",
            "default_route_table_id": "rtb-00892e3690160bae5",
            "default_security_group_id": "sg-00d75fe05ed3d2b04",
            "dhcp_options_id": "dopt-076cde88390d6f504",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f41435f64391edc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00892e3690160bae5",
            "owner_id": "375026044412",
            "tags": {
              "Ambiente": "dev",
              "Name": "vpc-ue1-Chatbot-dev-01",
              "Proyecto": "Chatbot"
            },
            "tags_all": {
              "Ambiente": "dev",
              "Name": "vpc-ue1-Chatbot-dev-01",
              "Proyecto": "Chatbot"
            }
          }
        }
      ]
    }
  ]
}